build_output_utf8.txt
Processing willy_ili9341_custom (board: ESP-General; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.36/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Library Manager: Installing h2zero/NimBLE-Arduino
Library Manager: Installing whywilson/ESP-PN532-UART
Library Manager: Installing h2zero/NimBLE-Arduino
Library Manager: Installing h2zero/NimBLE-Arduino
Verbose mode can be enabled via `-v, --verbose` option
[GZIP & EMBED INTO HEADER] - Nothing to process.
1f7994c8ed5c769eed978510bc87130b8a949a2f3c2042ccddba35aa8032befc bf39f7c0618c43a1df3302036248e5aeaf9793b3be2b804519d203e164905742
Host compiler not found; skipping mqjs_stdlib header generation.
Set MQJS_HOST_CC or mqjs_host_cc to a GCC-compatible compiler, or use Docker.

On Windows:
- install MSYS2 https://www.msys2.org/ at default path
- open C:\msys64\ucrt64.exe
- run on UCRT64 terminal: pacman -S --needed mingw-w64-i686-toolchain
- add C:\msys64\mingw32\bin to PATH, cmd: setx PATH "%PATH%;C:\msys64\mingw32\bin\"
- close and open VSCode again

On Mac:
- run on terminal: xcode-select --install

On Linux:
- run on terminal: sudo apt-get install -y --no-install-recommends gcc-multilib libc6-dev-i386


CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/ESP-General.html
PLATFORM: Espressif 32 (55.3.36) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.6 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.30aaf64524 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
[ComponentManager] BT/BLE protection enabled
[ComponentManager] Processed 4 ignored libraries
[ComponentManager] Session completed with 2 changes
*** Applied include path shortening for 331 framework paths ***
*** Path length reduced from 35101 to ~13667 characters ***
*** Estimated savings: 20853 characters ***
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ strict
Found 90 compatible libraries
Scanning dependencies...
Dependency Graph
|-- mquickjs @ 0.0.6
|-- AnimatedGIF @ 2.2.0
|-- Time @ 1.6.1
|-- ArduinoJson @ 7.4.2
|-- NimBLE-Arduino @ 2.3.7
|-- RF24 @ 1.4.11
|-- TinyGPSPlus @ 1.1.0
|-- FFT @ 0.0.1
|-- rc-switch @ 2.6.4
|-- IRremoteESP8266 @ 2.8.6
|-- SimpleCLI @ 1.1.4
|-- RFID_MFRC522v2 @ 2.0.6
|-- ESP Chameleon Ultra @ 0.0.2
|-- ESP PN532 UART @ 0.0.2
|-- ESP PN532Killer @ 0.0.7
|-- ESP PN32BLE @ 0.0.2
|-- ESPAsyncWebServer @ 3.10.0
|-- JPEGDecoder @ 2.0.0
|-- ESP8266SAM @ 1.1.0
|-- ESP8266Audio @ 1.9.9
|-- ESP32Time @ 2.0.6
|-- NTPClient @ 3.2.1
|-- Adafruit BusIO @ 1.17.2-bruce.1
|-- Adafruit PN532 @ 1.3.3-bruce.1
|-- lvgl @ 8.3.11
|-- Adafruit Si4713 Library @ 1.2.3
|-- SmartRC-CC1101-Driver-Lib @ 2.5.7
|-- LibSSH-ESP32 @ 5.8.0+sha.1dead2f
|-- WireGuard-ESP32 @ 0.1.5
|-- BER-TLV @ 0.0.0+20260228234903
|-- ESP Amiibolink @ 0.0.2
|-- RadioLib @ 7.6.0
|-- PNGdec @ 1.1.6
|-- OneWire @ 2.3.8
|-- XPowersLib @ 0.3.4
|-- FastLED @ 3.10.3
|-- ESP32-PSRamFS @ 1.0.6
|-- WiFi @ 3.3.6
|-- BruceHAL @ 7.3.1
|-- Wire @ 3.3.6
|-- HTTPClient @ 3.3.6
|-- Bad_Usb_Lib
|-- LittleFS @ 3.3.6
|-- Ethernet @ 3.3.6
|-- Networking @ 3.3.6
|-- SPI @ 3.3.6
|-- WebServer @ 3.3.6
|-- FS @ 3.3.6
|-- TFT_eSPI QRcode @ 1.0.0
|-- DNSServer @ 3.3.6
|-- Preferences @ 3.3.6
|-- RTC
|-- utility
|-- AsyncTCP @ 3.4.10
|-- ESPmDNS @ 3.3.6
|-- PN532_SRIX
|-- NetworkClientSecure @ 3.3.6
|-- SPIFFS @ 3.3.6
Building in release mode
Compiling .pio\build\willy_ili9341_custom\src\modules\rfid\RFID2.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\rfid\nfc_advanced_atks.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\advanced_atks.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\deauther.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\evil_portal.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\karma_attack.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\responder.cpp.o
Compiling .pio\build\willy_ili9341_custom\src\modules\wifi\sniffer.cpp.o
C:\.platformio\penv\Scr
ipts\platformio.exe : s
rc/modules/rfid/RFID2.c
pp: In member function 
'int RFID2::read_mifare
_ultralight_data_blocks
()':
No linha:1 caractere:1
+ C:\.platformio\penv\S
cripts\platformio.exe 
run -e 
willy_ili9341_custo ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (src/modules/r   
 fi...data_blocks()    
'::String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
src/modules/rfid/RFID2.
cpp:449:17: error: 'i' 
was not declared in 
this scope
  449 |                
 i = 4 * offset + 
index;
      |                
 ^
*** [.pio\build\willy_i
li9341_custom\src\modul
es\rfid\RFID2.cpp.o] 
Error 1
src/modules/rfid/nfc_ad
vanced_atks.cpp: In 
function 'void 
setupRelayBLE(bool)':
src/modules/rfid/nfc_ad
vanced_atks.cpp:45:9: 
error: 'relayRx' was 
not declared in this 
scope; did you mean 
'relayTx'?
   45 |         
relayRx = relayService-
>createCharacteristic("
0000aaac-0000-1000-8000
-00805f9b34fb", 
NIMBLE_PROPERTY::WRITE 
| NIMBLE_PROPERTY::WRIT
E_NR);
      |         ^~~~~~~
      |         relayTx
src/modules/rfid/nfc_ad
vanced_atks.cpp: In 
lambda function:
src/modules/rfid/nfc_ad
vanced_atks.cpp:111:23:
 error: 'uid' was not 
declared in this scope
  111 |                
 (void)uid; // 
suppress unused
      |                
       ^~~
src/modules/rfid/nfc_ad
vanced_atks.cpp: In 
function 'void 
NDEFStealthExfil()':
src/modules/rfid/nfc_ad
vanced_atks.cpp:262:13:
 warning: unused 
variable 'ndefPayload' 
[-Wunused-variable]
  262 |     uint8_t 
ndefPayload[] = {
      |             
^~~~~~~~~~~
src/modules/rfid/nfc_ad
vanced_atks.cpp:270:13:
 warning: unused 
variable 'uid' 
[-Wunused-variable]
  270 |     uint8_t 
uid[4] = {0x08, 0x01, 
0x02, 0x03};
      |             ^~~
src/modules/rfid/nfc_ad
vanced_atks.cpp: In 
function 'void LiveData
InjectionEmulation()':
src/modules/rfid/nfc_ad
vanced_atks.cpp:397:13:
 warning: unused 
variable 'uid' 
[-Wunused-variable]
  397 |     uint8_t 
uid[4] = {0x12, 0x34, 
0x56, 0x78};
      |             ^~~
src/modules/rfid/nfc_ad
vanced_atks.cpp: In 
function 'void 
NFCWormPropagator()':
src/modules/rfid/nfc_ad
vanced_atks.cpp:558:13:
 warning: unused 
variable 'uid' 
[-Wunused-variable]
  558 |     uint8_t 
uid[4] = {0xDE, 0xAD, 
0xBE, 0xEF};
      |             ^~~
*** [.pio\build\willy_i
li9341_custom\src\modul
es\rfid\nfc_advanced_at
ks.cpp.o] Error 1
src/modules/wifi/advanc
ed_atks.cpp: In 
function 'void 
visualWifiHeatmap()':
src/modules/wifi/advanc
ed_atks.cpp:533:14: 
warning: variable 
'last_update' set but 
not used [-Wunused-but-
set-variable]
  533 |     uint32_t 
last_update = millis();
      |              
^~~~~~~~~~~
src/modules/wifi/advanc
ed_atks.cpp: In 
function 'void 
wpa3DowngradeAttack()':
src/modules/wifi/advanc
ed_atks.cpp:818:52: 
error: 'beacon_len' 
was not declared in 
this scope; did you 
mean 'beacon_count'?
  818 |         esp_wif
i_80211_tx(WIFI_IF_AP, 
wpa2_beacon, 
beacon_len, false);
      |                
                       
             ^~~~~~~~~~
      |                
                       
             
beacon_count
src/modules/wifi/advanc
ed_atks.cpp: In lambda 
function:
src/modules/wifi/advanc
ed_atks.cpp:1425:27: 
warning: comparison of 
integer expressions of 
different signedness: 
'int' and 'size_t' 
{aka 'unsigned int'} 
[-Wsign-compare]
 1425 |         for 
(int i = 0; i < 
request->args(); i++) {
      |                
         
~~^~~~~~~~~~~~~~~~~
src/modules/wifi/advanc
ed_atks.cpp: At global 
scope:
src/modules/wifi/advanc
ed_atks.cpp:41:21: 
warning: 
'attack_task_handle' 
defined but not used 
[-Wunused-variable]
   41 | static 
TaskHandle_t 
attack_task_handle = 
NULL;
      |                
     ^~~~~~~~~~~~~~~~~~
*** [.pio\build\willy_i
li9341_custom\src\modul
es\wifi\advanced_atks.c
pp.o] Error 1
=======================
== [FAILED] Took 
201.86 seconds ========
=================

Environment           
Status    Duration
--------------------  
--------  ------------
willy_ili9341_custom  
FAILED    00:03:21.863
==================== 1 
failed, 0 succeeded in 
00:03:21.863 
====================
